Correction du padding et du overflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,7 @@
 /*General Customisation*/
 body {
   background-color: #011627;
+  overflow-x: hidden;
 }
 
 h1 {
@@ -63,7 +64,7 @@ iframe, object, embed {
 /*Timeline Customisation*/
 .timeline {
   list-style: none;
-  padding: 20px 0 20px;
+  padding: 20px 10px 20px;
   position: relative;
   color: white;
 }
